--- a/accounting.toFixedTwist.html
+++ b/accounting.toFixedTwist.html
@@ -51,7 +51,7 @@ function betterRound(number, precision) {
       decimalNumbers += '0';
     }
 
-    // Insert decimal in the right place within the decimalNumbers substring; 
+    // Insert decimal in the correct place within the decimalNumbers substring; 
     // set to the variable.
     decimalNumbers = decimalNumbers.substring(0, precision) + '.' 
     + decimalNumbers.substring(precision);
